--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
 body{
-    margin: 10px;
+    margin: 0;
     padding: 0;
 }
 
 
 header{
-    margin: 10px;
-
     display: flex;
-    
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 50px;
+    position: fixed;
+}
+
+
+#BarraPesquisa{
+    background-color: rgb(0, 0, 0);
+    width: 600px;
+    height: 30px;
+    border-radius: 20px;
+}
+
+#part1{
+    height: 300vh;
+    background-image:url(imagens/image\ 1.png)
+    
 }
