--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
 }
 
 
+
 #BarraPesquisa{
     background-color: rgb(0, 0, 0);
     width: 600px;
@@ -22,7 +23,11 @@ header{
 }
 
 #part1{
-    height: 300vh;
-    background-image:url(imagens/image\ 1.png)
+    backdrop-filter: ;
+    background-size: cover;
+    width: 100%;
+    height: 60vh;
+    background-image:url(imagens/image1.png);
+    background-repeat: no-repeat;
     
 }
