--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body{
     padding: 0;
 }
 
+p{
+    color: white;
+    font-size: 2em;
+    font: italic;
+}
 
 header{
     display: flex;
@@ -11,19 +16,30 @@ header{
     width: 100%;
     height: 50px;
     position: fixed;
+    
 }
 
+#espaco{
+    width: 15%;
+}
+#itens{
+    width: 20%;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
+}
 
 #BarraPesquisa{
     background-color: rgb(0, 0, 0);
-    width: 600px;
+    width: 25%;
     height: 30px;
     border-radius: 20px;
 }
 
 #part1{
-    backdrop-filter: ;
+    
     background-size: cover;
     width: 100%;
     height: 60vh;
